# phy_3902_labs

./: .gitignore  README.md  pyproject.toml
data/: 2c_blue_led.csv  2c_led.csv  2d_red_led.csv  2d_yellow_led.csv  2e_blue_led.csv  2e_green_525hz_led.csv  2e_green_led.csv  2e_red_led.csv  2e_yellow_led.csv
experiment_2/data/: 2c_led.csv  2e_yellow_led.csv
experiment_2/data/2d/: 2d_green_led.csv
experiment_2/notebooks/: part_e.ipynb
experiment_2/src/: 2d_led_fit.py
experiment_2/src/DAC_plank_2E/: DAC_plank_2E.ino
notebooks/: part_d.ipynb  part_e.ipynb
src/: 2d_led_fit.py
src/DAC_LED_experiment_2C/: DAC_LED_experiment_2C.ino
src/DAC_plank_2E/: DAC_plank_2E.ino
src/DAC_test_experiment_2B/: DAC_test_experiment_2B.ino
