[project]
name = "phy-3902-labs"
version = "0.1.0"
description = ""
authors = [
    {name = "h4lfw1t",email = "graysonofgotham2112@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.3.2,<3.0.0)",
    "numpy (>=2.3.3,<3.0.0)",
    "matplotlib (>=3.10.6,<4.0.0)",
    "scipy (>=1.16.2,<2.0.0)",
    "polars (>=1.33.1,<2.0.0)",
    "nbstripout (>=0.8.1,<0.9.0)",
    "nbconvert (>=7.16.6,<8.0.0)",
    "jupyterlab (>=4.4.7,<5.0.0)",
    "notebook (>=7.4.5,<8.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
